# MLOps-fraud-detection

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  dvc.yaml  params.yaml  pyproject.toml
.dvc/: config
.github/workflows/: build-push.yml  train-test.yml
k8s/argocd/: app.yaml
k8s/kserve/: inference-service.yaml
k8s/monitoring/: drift-alert.yaml
pipelines/: retrain-workflow.yaml  test_retrain_local.sh
pipelines/events/: drift-event-source.yaml  drift-sensor.yaml
src/features/: feast_materialize.py  prepare.py  validate.py
src/features/feature_repo/: feature_store.yaml  features.py
src/monitoring/: drift_monitor.py  prediction_logger.py
src/serving/: api.py  model_loader.py  service.py
src/training/: evaluate.py  register.py  train.py
tests/unit/: conftest.py  test_prepare.py  test_validate.py
