[project]
name = "mlops-fraud-gke"
version = "0.1.0"
description = "End-to-End MLOps Platform on GKE — Fraud Detection"
requires-python = ">=3.11"
dependencies = [
    # Data
    "polars>=0.20",
    "pandas>=2.0",
    "pyarrow>=14.0",
    "pandera>=0.18",
    "great-expectations>=0.18",

    # Feature Store
    "feast[redis]>=0.35",

    # Training
    "scikit-learn>=1.4",
    "xgboost>=2.0",
    "lightgbm>=4.0",
    "optuna>=3.5",
    "imbalanced-learn>=0.12",

    # Tracking
    "mlflow>=2.10",
    "boto3>=1.34",       # MLflow needs this for GCS via s3-compatible

    # Serving
    "bentoml>=1.2",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "prometheus-client>=0.20",

    # Monitoring
    "evidently>=0.4",

    # Pipeline
    "dvc[gs]>=3.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.3",
    "mypy>=1.9",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
